--- a/Gumdrop/Source/Gumdrop/Gumdrop.vcxproj
+++ b/Gumdrop/Source/Gumdrop/Gumdrop.vcxproj
@@ -21,6 +21,9 @@
   <ItemGroup>
     <ClCompile Include="..\Source.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\Source.h" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
     <VCProjectVersion>15.0</VCProjectVersion>
     <ProjectGuid>{71577B8E-5EA5-45FF-9332-2CE0612BE658}</ProjectGuid>
