--- a/Gumdrop/Source/Gumdrop/Gumdrop.vcxproj
+++ b/Gumdrop/Source/Gumdrop/Gumdrop.vcxproj
@@ -19,9 +19,12 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\Actors\SpecialAbilityComponent.cpp" />
     <ClCompile Include="..\Source.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\Actors\AbilitiesInterface.h" />
+    <ClInclude Include="..\Actors\SpecialAbilityComponent.h" />
     <ClInclude Include="..\Source.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
