--- a/Gumdrop/Source/Gumdrop/Gumdrop.vcxproj.filters
+++ b/Gumdrop/Source/Gumdrop/Gumdrop.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="Collider.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="Source.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Actors\SpecialAbilityComponent.h">
